# dioxus-todo-sample

./: Cargo.toml
components/: Cargo.toml
components/src/: lib.rs
components/src/elements/: Button.rs  Button.scss  CardBase.rs  CardBase.scss  FormInput.rs  FormInput.scss  Stack.rs  Stack.scss  Title.rs  Title.scss  mod.rs
components/src/layouts/: Header.rs  Header.scss  TaskCard.rs  TaskForm.rs  mod.rs
components/src/pages/: Task.rs  mod.rs
models/: Cargo.toml
models/src/: task.rs
web/: Cargo.toml  Dioxus.toml
web/src/: main.rs  reset.scss
