[workspace]
members = [
    "models",
    "components",
    "web"
]

[workspace.package]
name = "dioxus-todo-sample"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
dioxus = "0.4.3"
dioxus-logger = "0.4.1"
log = "0.4.20"
strum = { version = "0.25.0", features = ['derive', 'strum_macros'] }
