[package]
name = "components"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "components"
path = "src/lib.rs"


[dependencies]
dioxus.workspace = true
dioxus-logger.workspace = true
log.workspace = true
strum.workspace = true

models = { path = "../models" }
